fixed white bar issue on mobile

--- a/main.css
+++ b/main.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Rowdies&display=swap');
-html, body, main{
+html, body{
+border: 20px yellow
   height: 100%;
   width: 100%;
   font-family: 'Rowdies' , sans-serif;
   color: #222;
+}
+html {
+  overflow-x: hidden;
 }
 .foot{
   margin-top: 2rem;
@@ -27,7 +31,7 @@ li {
   text-align: center;
 }
 .jumbotron{
-  padding: 1rem;
+  /* padding: 1rem; */
   border-radius: 0;
 }
 .padding {
@@ -61,9 +65,8 @@ a:link{
 .mainwrap {
   text-align: center;
   min-height: 100vh; /* will cover the 100% of viewport */
-   overflow: hidden;
+   overflow-x: hidden;
    display: block;
-   position: relative;
    padding-bottom: 100px; /* height of your footer */
 }
 .section-default {
@@ -169,6 +172,7 @@ padding-right: 5px;
   height: 100%;
   width:100%;
   background: rgba(0, 0, 0, .8);
+  right:0;
 }
 #parapic{
   max-height: 500px;
@@ -217,4 +221,7 @@ input[type=text],textarea,input[type=password]{
 .black-overlay {
   width:100%;
   height: 100%;
+}
+.crypto {
+  padding-left: 2rem;
 }
